# Aisthesis-hackaton_KOLOSALAI

./: .gitignore  LICENCE  README.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_DOC.md  Dockerfile  README.md  database.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e510c587332a_add_status_and_error_to_analysis.py  e7850e99b0ef_initial_commit.py
backend/app/: config.py  database.py  main.py  worker.py
backend/app/core/: auth.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  base.py  oauth.py  user.py
backend/app/models/analysis/: __init__.py  action_plan.py  analysis.py  brand_theme.py  marketplace.py  packaging.py  persona.py  pricing.py  seo.py  story.py  taste.py
backend/app/prompts/: SEO_prompt.py  __init__.py  action_plan_prompt.py  brand_prompt.py  exceptions.py  marketplace_prompt.py  packaging_prompt.py  persona_prompt.py  pricing_prompt.py  story_prompt.py  taste_prompt.py  vision_prompt.py
backend/app/routers/: analysis_router.py  auth_router.py
backend/app/schemas/: __init__.py  analysis.py  analysis_action_plan.py  analysis_branding.py  analysis_marketplace.py  analysis_packaging.py  analysis_person.py  analysis_pricing.py  analysis_seo.py  analysis_story.py  analysis_taste.py  auth.py  user.py  vision.py
backend/app/services/: analysis_service.py  users_service.py
backend/app/utils/: cleanup.py  encode_image.py
backend/users/: auth_router.py  models.py  router.py  schemas.py  service.py
frontend/: .dockerignore  README.md  (+9 more)
(+68 files in other folders)
